# claude-session-index

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
hooks/: settings-snippet.json
launchagent/: com.session-indexer.plist
session_index/: __init__.py  analyzer.py  cli.py  config.py  indexer.py  search.py  topic_capture.py
skill/: SKILL.md
skills/session-index/: SKILL.md
