[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-index"
version = "0.2.0"
description = "Index, search, and analyze your Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lee Fuhr", email = "hi@leefuhr.com"}
]
keywords = ["claude", "claude-code", "session", "search", "index", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]

[project.optional-dependencies]
synthesis = ["anthropic>=0.30.0"]

[project.scripts]
sessions = "session_index.cli:main"
session-index = "session_index.indexer:main"
session-search = "session_index.search:main"
session-analyze = "session_index.analyzer:main"
session-topic-capture = "session_index.topic_capture:main"

[project.urls]
Homepage = "https://github.com/lee-fuhr/claude-session-index"
Repository = "https://github.com/lee-fuhr/claude-session-index"
Issues = "https://github.com/lee-fuhr/claude-session-index/issues"

[tool.setuptools.packages.find]
include = ["session_index*"]
